# -Revenue-Procurement-Copilot-Platform-RPCP-

./: .gitignore  01-项目总方案.md  02-产品文档PRD.md  03-技术方案文档.md  04-实施方案.md  05-高保真原型与页面设计说明.md  06-数据字典与指标口径文档.md  07-系统集成接口设计文档.md  08-部署架构与运维手册.md  09-测试方案与验收用例.md  10-汇报PPT大纲版文档.md  README-CODEBASE.md  README.md  RUNBOOK.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_auth_tables.py  0002_proposal_draft_text_fields.py  0003_domain_platform_tables.py
apps/api/src/app/: main.py  run.py  seed.py
apps/api/src/app/api/: router.py
apps/api/src/app/core/: config.py  exceptions.py  logging.py  security.py
apps/api/src/app/db/: session.py
apps/api/src/app/models/: __init__.py  base.py  identity.py  lead.py  platform.py  procurement.py  proposal.py  supplier.py
apps/api/src/app/repositories/: base.py
apps/api/src/app/schemas/: ai.py  common.py  domain_write.py  identity.py  integration.py  lead.py  lead_write.py  observability.py  platform.py  procurement.py  proposal.py  supplier.py
apps/api/src/app/services/: __init__.py  ai_provider.py  ai_task_service.py  aliyun_qwen_provider.py  audit_service.py  integration_service.py  knowledge_service.py  lead_service.py  mock_ai_provider.py  mock_data.py  observability_service.py  orchestrator.py  procurement_service.py  proposal_service.py  supplier_service.py  (+2 more)
apps/api/src/rpcp_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_app.py
(+47 files in other folders)
